--- a/showroom.html
+++ b/showroom.html
@@ -47,84 +47,96 @@
         <h1 class="frase">SHOW ROOM</h1>
     </div>
 
-    <div class="container_descrizione">
-        <h1>Un sogno, un progetto, una realtà</h1>
-        <p>Benvenuti nel Nostro Showroom: Dove i Sogni Si Trasformano in Realtà.
-            Nel cuore della nostra filosofia aziendale, c'è la convinzione che ogni progetto abbia il potenziale per trasformare un sogno in una tangibile e straordinaria realtà. Il nostro Showroom è il luogo dove questa trasformazione prende forma, dove le vostre visioni prendono vita sotto la luce e l'eleganza delle nostre porte e infissi.
-            <br><br>
-            Esplorate il Vostro Stile:
-            Entra nel mondo incantevole delle possibilità che offriamo. Ogni angolo del nostro showroom è progettato per ispirare e guidare la vostra creatività. Sperimentate la varietà di design, materiali e finiture che abbiamo accuratamente selezionato per soddisfare ogni stile e preferenza. Che siate alla ricerca di un'atmosfera classica o di soluzioni innovative e moderne, qui troverete l'eccellenza che definisce il nostro impegno.
-            <br><br>
-            Il Design Incontra la Funzionalità:
-            Non crediamo che il design debba sacrificare la funzionalità. Le nostre porte e infissi non sono solo esteticamente accattivanti, ma sono anche concepiti per offrire prestazioni affidabili e durature. Nel nostro showroom, avrete l'opportunità di toccare con mano la qualità dei materiali e la cura artigianale che caratterizzano ogni pezzo.
-            <br><br>
-            Assistenza Personalizzata:
-            Il nostro team esperto è qui per accompagnarvi in ogni fase, dalla scelta del prodotto più adatto alle vostre esigenze fino alla completa realizzazione del vostro progetto. Siamo qui per trasformare il vostro sogno in una realtà senza compromessi.
-            Entra nel nostro Showroom e inizia il viaggio per trasformare la tua visione in una casa che riflette veramente chi sei. Un sogno, un progetto, una realtà: tutto inizia qui</p>
-    </div>
-
-    <div class="section_img">
-
-        <div class="container_img_mobile">
-            <img class='img_mobile'>
+    <div class="container_section1">
+        <div class="container_slogan">
+            <h1>Benevenuto nel nostro <br> Show Room</h1>
+            <p>Qui i Sogni si trasformano in realtà</p>
         </div>
-
-
-        <div class="container_img">
-            <img id="immagine" style="height: 100%; width: auto;">
-            <button class="close">X</button>
-        </div>
-
-        <div class="card-mosaic" >
-
-        </div>
-
-    </div>
-
-
-    <div class="container_vieni_a_trovarci">
-        <div class="container_appuntamento">
-
-            <form name="modulo_appuntamento" onsubmit="return sendMailAppuntamento();">
-                <h1>Prenota un appuntamento</h1>
-                <p>*Campi Obbligatori</p>
-                <p id="errore">Completa tutti i campi</p>
-
-                <div class="campo_form" >
-                    <h2>*Nome</h2>
-                    <input name="nome" type="text" placeholder="nome cognome">
-                </div>
-                <div class="campo_form">
-                    <h2>*Email</h2>
-                    <input name="mail" type="text" placeholder="exemple@exemple.it">
-                </div>
-                <div class="campo_form">
-                    <h2>*Telefono</h2>
-                    <input name="telefono" type="text" placeholder="3384427293">
-                </div>
-                <div class="campo_form" >
-                    <h2>*Giorno</h2>
-                    <input name="giorno" type="date">
+        <div class="container_paroleChiavi">
+            <div class="container_parolaChiave block1">
+                <div class="img_space">
+                    <img src="Immagini/ShowRoom/sogno.jpg" alt="sogno.jpg" style="width: 100%; height: 100%; object-fit: cover">
                 </div>
 
-                <div class="container_trattamento_dati">
-                    <input type="checkbox" id="checkbox">
-                    <p>Ho letto l’Informativa e Autorizzo Il Trattamento Dei Miei Dati Personali Per le finalita Ivi indicate</p>
+                <div class="descrizione">
+                    <h1>Un Sogno</h1>
+                    <p>Esplora un mondo di possibilità dove l'immaginazione si traduce in una visione di casa perfetta.
+                        "Un sogno" rappresenta la fase iniziale di creazione, dove aspirazioni e desideri prendono forma, alimentando la speranza di uno spazio ideale e affascinante.</p>
+                </div>
+                <div class="touch-btn btn1">
+                    <img src="Immagini/SVG/touch.svg">
+                </div>
+            </div>
+            <div class="container_parolaChiave block2">
+                <div class="img_space">
+                    <img src="Immagini/ShowRoom/progetto.jpg" alt="sogno.jpg" style="width: 100%; height: 100%; object-fit: cover">
                 </div>
 
-                <input type="submit" class="submit">
-
-            </form>
-
-            <div class="allert_prenotazione">
-                Grazie per avere richesto un appuntamente, ti contatteremo nei prossimi giorni per confermarlo.
+                <div class="descrizione">
+                    <h1>Un Progetto</h1>
+                    <p>Trasforma il tuo sogno in una pianificazione concreta e funzionale.
+                        "Un progetto" implica la traduzione delle idee in azioni, concentrandosi sulla progettazione di soluzioni personalizzate che soddisfano le esigenze estetiche e pratiche. Questa fase coinvolge decisioni dettagliate e un approccio pratico alla realizzazione del tuo ambiente ideale.</p>
+                </div>
+                <div class="touch-btn btn2">
+                    <img src="Immagini/SVG/touch.svg">
+                </div>
+            </div>
+            <div class="container_parolaChiave block3">
+                <div class="img_space">
+                    <img src="Immagini/ShowRoom/realta.jpg" alt="sogno.jpg" style="width: 100%; height: 100%; object-fit: cover">
+                </div>
+                <div class="descrizione">
+                    <h1>Una Realtà</h1>
+                    <p>La fase finale in cui il sogno e il progetto si materializzano.
+                        "Una realtà" rappresenta l'atto di rendere tangibile la visione, creando uno spazio reale e abitabile.
+                        Qui, la combinazione di estetica e funzionalità si concretizza, offrendo una dimora che supera le aspettative e riflette fedelmente lo stile di vita e le preferenze del proprietario.</p>
+                </div>
+                <div class="touch-btn btn3">
+                    <img src="Immagini/SVG/touch.svg">
+                </div>
             </div>
         </div>
-        <div class="container_map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.072694874342!2d14.536847476828235!3d40.71641617139306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bbdff414b9427%3A0xc51e07b32a571dae!2sINDA%20porte%20%26%20finestre!5e0!3m2!1sit!2sit!4v1700815965651!5m2!1sit!2sit"
-                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <div style="width: 100%; height: 300px;
+    background: rgb(119,4,4);
+    background: linear-gradient(129deg, rgba(119,4,4,1) 0%, rgba(181,65,65,1) 100%);">
+        <div class="container_slogan">
+            <h1 style="color:white;">Perche venire a trovarci?</h1>
         </div>
     </div>
+    <!--
+    <div class="container_section2">
+
+        <div class="container_slogan">
+            <h1>Perche venire a trovarci?</h1>
+        </div>
+        <div class="subcontainer_section2">
+            <h1 style="color: #770404">Esplorate il vostro stile</h1>
+            <p>Entra nel mondo incantevole delle possibilità che offriamo.
+                Ogni angolo del nostro showroom è progettato per ispirare e guidare la vostra creatività.
+                Sperimentate la varietà di design, materiali e finiture che abbiamo accuratamente selezionato per soddisfare ogni stile e preferenza.
+                Che siate alla ricerca di un'atmosfera classica o di soluzioni innovative e moderne, qui troverete l'eccellenza che definisce il nostro impegno. </p>
+        </div>
+
+        <div class="subcontainer_section2">
+            <h1 style="color: #F0B357">Il Design incotra la funzionalita</h1>
+            <p>Non crediamo che il design debba sacrificare la funzionalità.
+                Le nostre porte e infissi non sono solo esteticamente accattivanti, ma sono anche concepiti per offrire prestazioni affidabili e durature.
+                Nel nostro showroom, avrete l'opportunità di toccare con mano la qualità dei materiali e la cura artigianale che caratterizzano ogni pezzo. </p>
+        </div>
+
+        <div class="subcontainer_section2">
+            <h1 style="color: #191A1A">Assistenza Personalizzata</h1>
+            <p>Il nostro team esperto è qui per accompagnarvi in ogni fase, dalla scelta del prodotto più adatto alle vostre esigenze fino alla completa realizzazione del vostro progetto.
+                Siamo qui per trasformare il vostro sogno in una realtà senza compromessi.
+                Entra nel nostro Showroom e inizia il viaggio per trasformare la tua visione in una casa che riflette veramente chi sei. Un sogno, un progetto, una realtà: tutto inizia qui</p>
+        </div>
+
+
+    </div>
+-->
+
 
     <footer>
         <div class="info_container">
@@ -166,4 +178,6 @@
 </body>
 <script src="./Script/navbar_effect.js"></script>
 <script src="./Script/showroom_script.js"></script>
+<script src="Script/Animation/showroom_animation_script.js"></script>
+<script src="./Script/Animation/Animation.js"></script>
 </html>
