--- a/chisiamo.html
+++ b/chisiamo.html
@@ -7,7 +7,7 @@
 
     <meta name="format-detection" content="telephone=no">
 
-    <link rel="stylesheet" href="CSS/showroom_style.css"/>
+    <link rel="stylesheet" href="CSS/chisiamo_style.css"/>
     <link rel="stylesheet" href="CSS/navbar_style.css" />
     <link rel="stylesheet" href="CSS/footer_style.css" />
     <link rel="stylesheet" href="CSS/animation.css" />
@@ -18,7 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Chi Siamo</title>
 </head>
-<body onresize="restoreDesktopMenu(); setSizeContainer();" onload="setSizeContainer();">
+<body>
 
 <header>
     <nav class="navbar">
@@ -42,6 +42,121 @@
         </div>
     </nav>
 </header>
+
+    <div  class="main_img">
+        <h1 class="frase">CHI SIAMO</h1>
+    </div>
+    <h1 class="sinceText">since2023</h1>
+
+
+    <div class="container_section1">
+        <div class="container_img">
+            <img src="./Immagini/ChiSiamo/Img1.jpg" style="width: 100%; height: 100%; object-position: center; object-fit: cover">
+        </div>
+        <div class="container_descrizione">
+            <h1>INDA, ECCELLENZA MADE IN ITALY</h1>
+            <p>A partire dal 2023, la nostra azienda si distingue con orgoglio nella produzione di serramenti completamente Made in Itali. Utilizzando materiali di eccellente qualità, sviluppiamo prodotti caratterizzate da un design unico e da varie combinazioni di materiali, tra cui PVC, alluminio e legno.
+                INDA è un'azienda tutta italiana, presente sul mercato dal 2023 e oggi protagonista indiscussa nel settore della produzione dei serramenti Made in Italy. Fin dall'inizio i nostri prodotti si sono distinti per l'impiego di materie prime di altissima qualità e per le linee pulite dall'inconfondibile design.
+                Attraverso una continua ricerca e attività di progettazione, siamo in grado di presentarti oggi una vasta selezione di prodotti che si distingue per l'adozione delle tecnologie più avanzate e l'utilizzo di vari materiali.</p>
+            <button class="btn_section1">Contattaci</button>
+        </div>
+    </div>
+
+    <div class="container_img2"></div>
+
+    <div class="container_section2">
+        <div class="container_parolaChiave">
+            <div class="container_icona">
+                <img src="./Immagini/ChiSiamo/SVG/Goal.svg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
+            </div>
+            <div class="container_descrizione_parolachiave">
+                <h1>Obiettivo</h1>
+                <p>
+                    Miriamo a garantire la felicità del cliente offrendo articoli di eccellente qualità, esteticamente piacevoli, raffinati, all'avanguardia dal punto di vista tecnologico e rispettosi dell'ambiente grazie alla loro assenza di sostanze dannose e alla loro origine da un processo produttivo responsabile.
+                </p>
+            </div>
+
+        </div>
+        <div class="container_parolaChiave">
+            <div class="container_icona">
+                <img src="./Immagini/ChiSiamo/SVG/Filosofia.svg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
+            </div>
+            <div class="container_descrizione_parolachiave">
+                <h1>Filosofia</h1>
+                <p>
+                    La scrupolosa scelta delle materie prime e l'impiego di un processo produttivo certificato consentono di realizzare serramenti con notevoli prestazioni, dove la parola chiave è "Futuro".
+                </p>
+            </div>
+
+        </div>
+        <div class="container_parolaChiave">
+            <div class="container_icona">
+                <img src="./Immagini/ChiSiamo/SVG/Valori.svg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
+            </div>
+            <div class="container_descrizione_parolachiave">
+                <h1>Valori</h1>
+                <p>
+                    La dedizione verso la nostra professione e l'impegno nel promuovere l'eccellenza italiana a livello globale, con un particolare focus sulla sostenibilità ambientale, definiscono la nostra incessante ricerca. Il rispetto per i nostri clienti, l'attenzione all'ambiente e l'aderenza alla tradizione artigianale del Made in Italy coesistono armoniosamente con un occhio vigile sulle innovazioni e le opportunità tecnologiche, costituendo le fondamenta della nostra produzione.
+                </p>
+            </div>
+
+        </div>
+        <div class="container_parolaChiave">
+            <div class="container_icona">
+                <img src="./Immagini/ChiSiamo/SVG/Green.svg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
+            </div>
+            <div class="container_descrizione_parolachiave">
+                <h1>Ambiente</h1>
+                <p>
+                    La considerazione per l'ambiente è una componente integrante delle nostre strategie di ricerca e sviluppo. Prestiamo una cura particolare nella scelta delle materie prime, garantendo che i nostri profili siano conformi alle normative europee. Nel processo di produzione, impieghiamo macchinari e metodologie mirate a ridurre significativamente il consumo energetico, contribuendo così a un approccio più sostenibile.
+                </p>
+            </div>
+
+        </div>
+        <div class="container_parolaChiave">
+            <div class="container_icona">
+                <img src="./Immagini/ChiSiamo/SVG/Collaboratori.svg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
+            </div>
+            <div class="container_descrizione_parolachiave">
+                <h1>Collaboratori</h1>
+                <p>
+                    Per la distribuzione dei nostri prodotti, ci avvaliamo di Partner professionali e qualificati in arado di assicurare efficaci standard lavorativi e organizzativi.
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container_section3" style="overflow: hidden">
+        <div class="container_section3_img">
+            <img src="./Immagini/ChiSiamo/img3.jpg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
+        </div>
+        <div class="container_section3_copertina" style="scale: 1">
+            <img src="./Immagini/Copertina/LogoCopertina-Mobile_black.svg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
+        </div>
+    </div>
+
+    <div class="container_section4">
+
+        <div class="container_descrizione_team">
+            <h1>Il Nostro Team</h1>
+            <p>Il nostro team dedicato agli infissi si distingue per anni di esperienza, professionalità e attenzione ai dettagli. Ogni membro, selezionato con cura, garantisce soluzioni su misura e un servizio affidabile. La passione per il design guida ogni progetto, creando ambienti sicuri ed esteticamente appaganti.
+                La professionalità è il nostro tratto distintivo, mantenendo gli standard più elevati dalla consulenza all'installazione. Scegliere il nostro team significa affidarsi a professionisti appassionati, pronti a trasformare le idee in realtà. Ogni finestra, porta o complemento d'arredo rappresenta la nostra dedizione alla perfezione.</p>
+            <button class="btn_section4">Contattaci</button>
+        </div>
+        <div class="container_img_team">
+            <img src="./Immagini/ChiSiamo/img4.jpg" style="width: 100%; height: 100%; object-position: center; object-fit: cover">
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
 <footer>
     <div class="info_container">
         <h1 class="footer-header">Dove Siamo</h1>
@@ -81,5 +196,6 @@
 
 </body>
 <script src="./Script/navbar_effect.js"></script>
-<script src="./Script/showroom_script.js"></script>
+<script src="./Script/chisiamo_script.js"></script>
+<script src="./Script/Animation/chisiamo_animation_script.js"></script>
 </html>
