--- a/chisiamo.html
+++ b/chisiamo.html
@@ -58,7 +58,7 @@
             <p>A partire dal 2023, la nostra azienda si distingue con orgoglio nella produzione di serramenti completamente Made in Itali. Utilizzando materiali di eccellente qualità, sviluppiamo prodotti caratterizzate da un design unico e da varie combinazioni di materiali, tra cui PVC, alluminio e legno.
                 INDA è un'azienda tutta italiana, presente sul mercato dal 2023 e oggi protagonista indiscussa nel settore della produzione dei serramenti Made in Italy. Fin dall'inizio i nostri prodotti si sono distinti per l'impiego di materie prime di altissima qualità e per le linee pulite dall'inconfondibile design.
                 Attraverso una continua ricerca e attività di progettazione, siamo in grado di presentarti oggi una vasta selezione di prodotti che si distingue per l'adozione delle tecnologie più avanzate e l'utilizzo di vari materiali.</p>
-            <button class="btn_section1">Contattaci</button>
+            <button class="btn_section1" onclick="location.href = 'contatti.html'" ontouchstart="location.href = 'contatti.html'">Contattaci</button>
         </div>
     </div>
 
@@ -142,7 +142,7 @@
             <h1>Il Nostro Team</h1>
             <p>Il nostro team dedicato agli infissi si distingue per anni di esperienza, professionalità e attenzione ai dettagli. Ogni membro, selezionato con cura, garantisce soluzioni su misura e un servizio affidabile. La passione per il design guida ogni progetto, creando ambienti sicuri ed esteticamente appaganti.
                 La professionalità è il nostro tratto distintivo, mantenendo gli standard più elevati dalla consulenza all'installazione. Scegliere il nostro team significa affidarsi a professionisti appassionati, pronti a trasformare le idee in realtà. Ogni finestra, porta o complemento d'arredo rappresenta la nostra dedizione alla perfezione.</p>
-            <button class="btn_section4">Contattaci</button>
+            <button class="btn_section4" onclick="location.href = 'contatti.html'" ontouchstart="location.href = 'contatti.html'">Contattaci</button>
         </div>
         <div class="container_img_team">
             <img src="./Immagini/ChiSiamo/img4.jpg" style="width: 100%; height: 100%; object-position: center; object-fit: cover">
