--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
              top:0;
              left: 0;
              z-index: 20;
-            background:url(Immagini/Copertina/LogoCopertina-Mobile.svg) no-repeat center center;
+            background:url(Immagini/Home/ImmagineDiCopertina.svg) no-repeat center center;
             background-size: cover"
         >
 
@@ -77,7 +77,7 @@
         <div  class="sezione_bussines_block">
             <div class="bussines_block" style="background-color: #770404;">
                     <span class="icon_bussines_space">
-                        <img src="./Immagini/SVG/Finestra.svg" alt="Finesta" style="width:100%; height: 100%">
+                        <img src="./Immagini/Home/IconaFinestra.svg" alt="Finesta" style="width:100%; height: 100%">
                     </span>
 
                 <span  class="bussines_description_space">
@@ -88,7 +88,7 @@
             </div>
             <div class="bussines_block" style="background-color: #191A1A;">
                     <span class="icon_bussines_space">
-                        <img src="./Immagini/SVG/Porta.svg" alt="Porta" style="object-fit:cover;">
+                        <img src="./Immagini/Home/IconaPorta.svg" alt="Porta" style="object-fit:cover;">
                     </span>
                 <span class="bussines_description_space">
                         <p class="descrizioneBussiness">
@@ -119,14 +119,14 @@
             <div class="immagine_sezione">
                 <div class="img_bg"></div>
                 <div class="img_container">
-                    <img src="./Immagini/Background/background_13.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black;">
+                    <img src="./Immagini/Home/ImgChiSiamo.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black;">
                 </div>
             </div>
         </div>
 
         <div  class="section" id="showroom">
             <div class="immagine_sezione" onload="setSizeContainerShowRoom();">
-                <img src="./Immagini/Background/background_14.jpg" style="width: 100%; height: 100%">
+                <img src="./Immagini/Home/ImgShowRoom.jpg" style="width: 100%; height: 100%">
             </div>
             <div class="descrizione_sezione">
                 <h1 class="header_style">IL NOSTRO<br>SHOW ROOM</h1>
@@ -157,7 +157,7 @@
                 <div class="img_bg1"></div>
                 <div class="img_bg2"></div>
                 <div class="img_container">
-                    <img src="./Immagini/Background/background_15.jpg" alt="ChiSiamo_Img" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black;">
+                    <img src="./Immagini/Home/ImgProdotti.jpg" alt="Prodotti_Img" style="width: 100%; height: 100%; box-shadow: 5px 5px 10px black;">
                 </div>
             </div>
         </div>
