--- a/chisiamo.html
+++ b/chisiamo.html
@@ -49,7 +49,7 @@
     <h1 class="sinceText">since2023</h1>
 
 
-    <div class="container_section1">
+    <div class="container_section1" style="overflow: hidden">
         <div class="container_img">
             <img src="./Immagini/ChiSiamo/Img1.jpg" style="width: 100%; height: 100%; object-position: center; object-fit: cover">
         </div>
@@ -64,7 +64,7 @@
 
     <div class="container_img2"></div>
 
-    <div class="container_section2">
+    <div class="container_section2" style="overflow: hidden">
         <div class="container_parolaChiave">
             <div class="container_icona">
                 <img src="./Immagini/ChiSiamo/SVG/Goal.svg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
@@ -136,7 +136,7 @@
         </div>
     </div>
 
-    <div class="container_section4">
+    <div class="container_section4" style="overflow: hidden">
 
         <div class="container_descrizione_team">
             <h1>Il Nostro Team</h1>
