--- a/prodotti.html
+++ b/prodotti.html
@@ -18,7 +18,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Prodotti</title>
 </head>
-<body onresize="restoreDesktopMenu(); setSizeContainerShowRoom();" onload="setSizeContainerShowRoom();">
+<body>
 
     <header>
         <nav class="navbar">
@@ -47,53 +47,109 @@
         <h1 class="frase">I nostri prodotti</h1>
     </div>
 
-    <div class="container_descrizione">
-        <h1>Design qualità e progettazione su misura</h1>
-        <p>Benvenuti nella nostra collezione di prodotti, un'ode all'eccellenza, all'artigianato italiano e al design senza compromessi. Ogni elemento di questa collezione rappresenta una fusione di eleganza e maestria artigianale.
-            Ci impegniamo a portare avanti la tradizione dell'artigianato italiano, dove la maestria artigiana si unisce alle tecnologie all'avanguardia. Ogni pezzo è frutto di un lavoro accurato, realizzato da esperti artigiani che mettono la loro passione nel creare opere d'arte funzionali.
-            La nostra dedizione alla qualità inizia con la selezione dei materiali. Utilizziamo solo le risorse migliori, dal legno pregiato ai metalli resistenti, garantendo che ogni prodotto sia costruito per durare. Ogni dettaglio è curato con precisione, offrendo un prodotto che unisce estetica e resistenza.
-            La qualità dei nostri prodotti è la nostra promessa. Siamo così sicuri della durata e della bellezza dei nostri articoli che offriamo una garanzia di soddisfazione completa. La tua casa merita solo il meglio, e con i nostri prodotti, hai la certezza di ottenere qualità, stile e un tocco di eleganza italiana.
-            Scopri la nostra collezione di porte e infissi, dove la qualità incontra l'italianità, e trasforma il tuo spazio in un'esperienza di stile senza tempo.</p>
+    <div class="container_slogan">
+        <h1>Esplora il nostro catalogo</h1>
+        <p>Design senza confini, sicurezza senza compromessi</p>
     </div>
 
-    <div class="sezione_prodotti">
-
-        <div class="container_categorie">
-
+    <div class="container_paroleChiavi">
+        <div class="container_parolaChiave">
+            <div class="container_immagine_parolaChiave">
+                <img src="Immagini/Prodotti/ImgDesign.jpg" style="width:100%; height: 100%; object-position: center; object-fit: cover">
+            </div>
+            <div class="container_descrizione_parolaChiave">
+                <h1>
+                    Design e Progettazione
+                </h1>
+                <p>
+                    Eleganza, raffinatezza e design innovativo. Linee pulite, attenzione ai dettagli e tecnologia all'avanguardia caratterizzano i nostri serramenti. Adatti a ogni stile, dalla classicità all'industrial chic, offrono versatilità architettonica e creatività unica nell'arredamento.
+                </p>
+            </div>
+            <div class="container_touch_icon">
+                <img src="Immagini/Prodotti/touch.svg" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
+            </div>
         </div>
 
-        <div class="container_prodotto">
+        <div class="container_parolaChiave">
+            <div class="container_immagine_parolaChiave">
+                <img src="Immagini/Prodotti/ImgEcologia.jpg" style="width:100%; height: 100%; object-position: center; object-fit: cover">
+            </div>
+            <div class="container_descrizione_parolaChiave">
+                <h1>
+                    Ecologia e Risparmio
+                </h1>
+                <p>
+                    Ci impegniamo a promuovere uno stile di vita eco-sostenibile con i nostri serramenti progettati per massimizzare l'efficienza energetica e ridurre l'impatto ambientale. Utilizziamo materiali riciclabili e tecnologie all'avanguardia per garantire prestazioni ottimali e comfort abitativo, contribuendo così a preservare il nostro prezioso pianeta.
+                </p>
+            </div>
+            <div class="container_touch_icon">
+                <img src="Immagini/Prodotti/touch.svg" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
+            </div>
+        </div>
 
-            <div class="btn_back">
-                <img src="Immagini/SVG/freccia.svg" alt="Indietro" style="width: 100%; height: 100%; rotate: 180deg;">
+        <div class="container_parolaChiave">
+            <div class="container_immagine_parolaChiave">
+                <img src="Immagini/Prodotti/ImgSicurezza.jpg" style="width:100%; height: 100%; object-position: center; object-fit: cover">
             </div>
-            <div class="btn_next">
-                <img src="Immagini/SVG/freccia.svg" alt="Indietro" style="width: 100%; height: 100%;">
+            <div class="container_descrizione_parolaChiave">
+                <h1>
+                    Sicurezza e Qualità
+                </h1>
+                <p>
+                    La tua sicurezza è la nostra priorità. I nostri serramenti sono progettati con la massima attenzione alla sicurezza, utilizzando materiali robusti e tecnologie avanzate. Ogni dettaglio è curato per offrire una protezione affidabile per la tua casa. Inoltre, ci impegniamo per garantire la massima qualità in ogni fase, dalla progettazione alla produzione.
+                </p>
             </div>
+            <div class="container_touch_icon">
+                <img src="Immagini/Prodotti/touch.svg" style="width:100%; height: 100%; object-position: center; rotate: -45deg;">
+            </div>
+        </div>
+    </div>
 
-            <div class="container_descrizione_prodotto">
-                <h1></h1>
-                <p></p>
-                <div class="circle_container_prodotti"></div>
-            </div>
-            <div class="container_immagini">
-                <img class="immagine_prodotto">
-                <div class="circle_container_img"></div>
-            </div>
+    <div class="sezione_sostenibilità">
+        <h1>> Prodotti Sostenibili</h1>
+    </div>
 
-            <div class="mosaico">
-            </div>
 
+
+    <div class="sezione_prodotti" style="overflow: hidden">
+
+        <div class="container_descrizione_prodotto">
+            <h1>
+                Prodotti
+            </h1>
+            <p>
+                Benvenuti nella nostra collezione di prodotti, un'ode all'eccellenza, all'artigianato italiano e al design senza compromessi. Ogni elemento di questa collezione rappresenta una fusione di eleganza e maestria artigianale. Ci impegniamo a portare avanti la tradizione dell'artigianato italiano, dove la maestria artigiana si unisce alle tecnologie all'avanguardia. Ogni pezzo è frutto di un lavoro accurato, realizzato da esperti artigiani che mettono la loro passione nel creare opere d'arte funzionali. La nostra dedizione alla qualità inizia con la selezione dei materiali. Utilizziamo solo le risorse migliori, dal legno pregiato ai metalli resistenti, garantendo che ogni prodotto sia costruito per durare. Ogni dettaglio è curato con precisione, offrendo un prodotto che unisce estetica e resistenza. La qualità dei nostri prodotti è la nostra promessa. Siamo così sicuri della durata e della bellezza dei nostri articoli che offriamo una garanzia di soddisfazione completa. La tua casa merita solo il meglio, e con i nostri prodotti, hai la certezza di ottenere qualità, stile e un tocco di eleganza italiana. Scopri la nostra collezione di porte e infissi, dove la qualità incontra l'italianità, e trasforma il tuo spazio in un'esperienza di stile senza tempo.
+            </p>
         </div>
 
 
-
+        <div class="container_tavola_elementi">
+            <img src="Immagini/Prodotti/TavolaMateriali.svg" style="width: 100%; height: 100%; object-position: center; object-fit: contain">
+        </div>
 
     </div>
 
 
 
+    <div class="container_catalogo">
 
+    </div>
+
+
+
+    <div class="container_contattaci" style="overflow: hidden">
+        <div class="container_descrizione_contattaci">
+            <h1>
+                La nostra porta è sempre aperta
+            </h1>
+            <p>
+                Hai domande sui nostri prodotti o vorresti discutere un progetto con noi? Non esitare, inviaci un'email, ti ricontatteremo il prima possibile.
+            </p>
+        </div>
+        <button>
+            Contattaci
+        </button>
+    </div>
 
 
 
@@ -140,4 +196,5 @@
 </body>
 <script src="./Script/navbar_effect.js"></script>
 <script src="./Script/prodotti_script.js"></script>
+<script src="./Script/Animation/prodotti_animation_script.js"></script>
 </html>
