--- a/prodotti.html
+++ b/prodotti.html
@@ -124,7 +124,7 @@
 
 
         <div class="container_tavola_elementi">
-            <img src="Immagini/Prodotti/TavolaMateriali.svg" style="width: 100%; height: 100%; object-position: center; object-fit: contain">
+            <img src="Immagini/Prodotti/TavolaMateriali.png" style="width: 100%; height: 100%; object-position: center; object-fit: contain">
         </div>
 
     </div>
