--- a/chisiamo.html
+++ b/chisiamo.html
@@ -36,7 +36,7 @@
         <div class="nav_links">
             <a class="link_navbar" href="index.html" >Home</a>
             <a class="link_navbar" href="chisiamo.html" style="color: #F0B357; text-decoration: underline">Chi Siamo</a>
-            <a class="link_navbar" href="showroom.html">ShowRoom</a>
+            <a class="link_navbar" href="">ShowRoom</a>
             <a class="link_navbar" href="prodotti.html">Prodotti</a>
             <a class="link_navbar" href="contatti.html">Contatti</a>
         </div>
@@ -127,13 +127,7 @@
         </div>
     </div>
 
-    <div class="container_section3" style="overflow: hidden">
-        <div class="container_section3_img">
-            <img src="./Immagini/ChiSiamo/img3.jpg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
-        </div>
-        <div class="container_section3_copertina" style="scale: 1">
-            <img src="./Immagini/ChiSiamo/ImmagineCopertina.svg" style="width: 100%; height: 100%; object-position: center; object-fit: cover;">
-        </div>
+    <div class="container_section3">
     </div>
 
     <div class="container_section4" style="overflow: hidden">
