--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="nav_links">
                 <a class="link_navbar" href="index.html" style="color: #F0B357; text-decoration: underline">Home</a>
                 <a class="link_navbar" href="chisiamo.html">Chi Siamo</a>
-                <a class="link_navbar" href="showroom.html">ShowRoom</a>
+                <a class="link_navbar" href="">ShowRoom</a>
                 <a class="link_navbar" href="prodotti.html">Prodotti</a>
                 <a class="link_navbar" href="contatti.html">Contatti</a>
             </div>
@@ -56,8 +56,7 @@
              left: 0;
              z-index: 20;
             background:url(Immagini/Home/ImmagineDiCopertina.svg) no-repeat center center;
-            background-size: cover"
-        >
+            background-size: cover">
 
         </div>
 
